# gitea-skills

./: .gitignore  AGENT_GUIDELINES.md  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.gitea/workflows/: agent_fix.yml  ci.yml
gitea_skills/: __init__.py  cli.py  core.py  dedup_issues.py  gitea_api.py  github_api.py  github_auth.py  github_credential_helper.py  install.py  plugin.json
gitea_skills/skills/gitea_agentic_loop/: SKILL.md
gitea_skills/skills/gitea_agentic_loop/references/: GITEA_CLI.md
gitea_skills/skills/gitea_agentic_loop/scripts/: push_to_github.sh
scratch/: test_agent.py
scripts/: check_ci.py  gitea_api.py  github_api.py  github_auth.py  github_credential_helper.py  merge_pr.py  pr_helper.py  push_to_github.sh  run_developer.py  run_reviewer.py  setup.sh  submit_review.py  worktree_helper.py
skills/agentic_dev/: SKILL.md  gitea_skills.py
src/: calculator.py
tests/: test_calculator.py  test_cli_comments_reviews.py  test_issues.py  test_keychain.py  test_metadata_sync.py  test_project_dir.py  test_repo_create.py
